force-app/main/default/objects/FundingBatchMeasureSpend__c/FundingBatchMeasureSpend__c.object-meta.xml
<CustomObject>
    <description>Junctions Batches and Property Measure Type specifying quantity and costs involved with the measure specified on the batch</description>
    <label>Batch Measure Spend</label>
    <nameField>
        <displayFormat>BMS-{00000}</displayFormat>
        <label>Batch Measure Spend Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Measure Spends</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>