force-app/main/default/objects/FundingBatchMeasureSpend__c/fields/Average_Cost_Cap_Difference__c.field-meta.xml
<CustomField>
    <fullName>Average_Cost_Cap_Difference__c</fullName>
    <inlineHelpText>For Flow use only.</inlineHelpText>
    <label>Average/Cost Cap Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>