force-app/main/default/objects/FundingBatchMeasureSpend__c/fields/Average_Price_Limit__c.field-meta.xml
<CustomField>
    <fullName>Average_Price_Limit__c</fullName>
    <inlineHelpText>For Flow use only.</inlineHelpText>
    <label>Average Price Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>