force-app/main/default/objects/FundingBatchMeasureSpend__c/fields/Average_Price_Limit_Text__c.field-meta.xml
<CustomField>
    <fullName>Average_Price_Limit_Text__c</fullName>
    <description>For flow use only.</description>
    <label>Average Price Limit Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>