force-app/main/default/objects/FundingBatchMeasureSpend__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <label>Batch</label>
    <referenceTo>FundingBatch__c</referenceTo>
    <relationshipLabel>Measure Spends</relationshipLabel>
    <relationshipName>Measure_Spends</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>