force-app/main/default/objects/FundingBatchMeasureSpend__c/fields/Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>Batch_Status__c</fullName>
    <formula>TEXT(Batch__r.ABS_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Status</label>
    <type>Text</type>
</CustomField>