force-app/main/default/objects/FundingBatchMeasureSpend__c/fields/Cost_Cap_Category__c.field-meta.xml
<CustomField>
    <fullName>Cost_Cap_Category__c</fullName>
    <formula>TEXT(Measure_Type__r.Cost_Cap_Category__c)</formula>
    <label>Cost Cap Category</label>
    <type>Text</type>
</CustomField>