force-app/main/default/objects/FundingBatchMeasureSpend__c/fields/House_Count__c.field-meta.xml
<CustomField>
    <fullName>House_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>House Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>