force-app/main/default/objects/FundingBatchMeasureSpend__c/fields/Measure_Type__c.field-meta.xml
<CustomField>
    <fullName>Measure_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Measure Type</label>
    <referenceTo>PropertyMeasureType__c</referenceTo>
    <relationshipLabel>Batch Measure Spends</relationshipLabel>
    <relationshipName>Batch_Measure_Spends</relationshipName>
    <type>Lookup</type>
</CustomField>