force-app/main/default/objects/FundingBatchMeasureSpend__c/fields/Measure_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Measure_Type_Name__c</fullName>
    <description>Needed for config</description>
    <formula>IF(Measure_Type__c =&quot;&quot;, Requested_Custom_Measure_Type__c,  Measure_Type__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Measure Type Name</label>
    <type>Text</type>
</CustomField>