force-app/main/default/objects/FundingBatchMeasureSpend__c/fields/Measure_Type_Status__c.field-meta.xml
<CustomField>
    <fullName>Measure_Type_Status__c</fullName>
    <formula>TEXT(Measure_Type__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Measure Type Status</label>
    <type>Text</type>
</CustomField>