force-app/main/default/objects/FundingBatchMeasureSpend__c/fields/Parent_Baseline_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Baseline_Id__c</fullName>
    <formula>CASESAFEID(Batch__r.Active_Baseline__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Baseline Id</label>
    <type>Text</type>
</CustomField>