force-app/main/default/objects/FundingBatchMeasureSpend__c/fields/Previous_Version__c.field-meta.xml
<CustomField>
    <fullName>Previous_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Version</label>
    <referenceTo>FundingBatchMeasureSpend__c</referenceTo>
    <relationshipLabel>Next Version</relationshipLabel>
    <relationshipName>Next_Version</relationshipName>
    <type>Lookup</type>
</CustomField>