force-app/main/default/objects/FundingBatchMeasureSpend__c/fields/Property_Measure_Type_Average_Price__c.field-meta.xml
<CustomField>
    <fullName>Property_Measure_Type_Average_Price__c</fullName>
    <formula>Measure_Type__r.Average_Price_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Measure Type Average Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>