force-app/main/default/objects/FundingBatchMeasureSpend__c/fields/Property_Measure_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Property_Measure_Type_Formula__c</fullName>
    <formula>Measure_Type__r.Name</formula>
    <label>Property Measure Type Name</label>
    <type>Text</type>
</CustomField>