force-app/main/default/objects/FundingBatchMeasureSpend__c/fields/Property_Measure_Type_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Property_Measure_Type_Record_Id__c</fullName>
    <formula>Measure_Type__r.Id</formula>
    <label>Property Measure Type Record Id</label>
    <type>Text</type>
</CustomField>