force-app/main/default/objects/FundingBatchMeasureSpend__c/fields/Requested_Custom_Measure_Type__c.field-meta.xml
<CustomField>
    <fullName>Requested_Custom_Measure_Type__c</fullName>
    <label>Requested Custom Measure Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>