force-app/main/default/objects/FundingBatchMeasureSpend__c/fields/Spend__c.field-meta.xml
<CustomField>
    <fullName>Spend__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>