force-app/main/default/objects/FundingBatchMeasureSpend__c/fields/Spend_per_House__c.field-meta.xml
<CustomField>
    <fullName>Spend_per_House__c</fullName>
    <formula>IF(OR(House_Count__c = 0, ISNULL(House_Count__c)), 0, Spend__c / House_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spend per House</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>