force-app/main/default/objects/FundingBatchMeasureSpend__c/fields/Total_House_Count_for_Measure_Type__c.field-meta.xml
<CustomField>
    <fullName>Total_House_Count_for_Measure_Type__c</fullName>
    <label>Total House Count for Measure Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>