force-app/main/default/objects/FundingBatchMeasureSpend__c/fields/Total_spend_for_this_measure_type__c.field-meta.xml
<CustomField>
    <fullName>Total_spend_for_this_measure_type__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Summarises and stores the total spend from all measure spend records that have the same Batch and Measure Type.</inlineHelpText>
    <label>Total spend for this measure type</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>