force-app/main/default/objects/FundingBatchMeasureSpend__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Batch__c</columns>
    <columns>Measure_Type_Name__c</columns>
    <columns>Requested_Custom_Measure_Type__c</columns>
    <columns>Spend__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>